# secbench

./: .gitignore  CITATION.cff  PUBLICATIONS.bib  PUBLICATIONS.md  README.md
ci/: Jenkinsfile
doc/: Makefile  conf.py  glossary.rst  index.rst  installation.md
doc/_static/: custom_basicstrap.css
doc/api-reference/: api.rst  index.rst  picoscope.rst  processing.rst  storage.rst
doc/tutorials/: acquisition_and_storage.md  bench_and_discovery.md  configuration.md  index.rst  instrument_tutorial.md  pattern_matching_alignment.md  storage_walkthrough.md  using_scopes.md
sdk/: activate.sh.in  patch_libudev.py  setup.sh
src/secbench-api/: README.md  pyproject.toml  setup.cfg  tox.ini
src/secbench-api/secbench/api/: bench.py  discovery.py  helpers.py  types.py
src/secbench-api/secbench/api/backend/: pyvisa.py  serial.py  usbtmc.py  vxi11.py
src/secbench-api/secbench/api/instrument/: pulser.py  scope.py
src/secbench-api/secbench/api/simulation/: scope.py
src/secbench-api/tests/: conftest.py  test_core.py
src/secbench-native/: Cargo.toml  README.md  pyproject.toml
src/secbench-native/crates/secbench_crypto/: Cargo.toml
src/secbench-native/crates/secbench_crypto/src/: lib.rs  pcg32.rs
src/secbench-native/crates/secbench_dsp/: Cargo.toml
src/secbench-native/crates/secbench_dsp/src/: fft.rs  lib.rs  multi_condmean.rs  sliding.rs  traits.rs
src/secbench-native/crates/secbench_processing/: Cargo.toml
src/secbench-native/crates/secbench_processing/src/: crypto.rs  dsp.rs  errors.rs  lib.rs
src/secbench-native/src/: lib.rs
src/secbench-picoscope/: README.md  pyproject.toml  setup.cfg  tox.ini
src/secbench-processing/: pyproject.toml  setup.cfg  tox.ini
src/secbench-storage/: README.md  pyproject.toml  setup.cfg  tox.ini
